fixed glossary page, made slight css adjustments, fixed error message overlaps

--- a/src/static/css/scan.css
+++ b/src/static/css/scan.css
@@ -56,6 +56,7 @@ html, body {
 }
 
 .error {
+    display: inline-block;
     color: red;
     background-color: #f8d7da;
     border-radius: 5px;
